--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>WDD 131</h1>
+    <h1>WDD 131 - Dynamic Web Fundamentals</h1>
 </body>
 </html>
