W01 activity - Basic Layout

--- a/week01/index.html
+++ b/week01/index.html
@@ -4,10 +4,27 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WDD131 || Fegor William Abije</title>
+        <link rel="stylesheet" href="styles/layout.css">
     </head>
     <body>
-        <header>Header Content</header>
-        <main></main>
-        <footer></footer>
+        <header>
+            <div>Header Content</div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Projects</li>
+                    <li>Services</li>
+                    <li>Contact Us</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            Main Content
+        </main>
+
+        <aside>Aside Content</aside>
+        <footer>
+            Footer Content
+        </footer>
     </body>
 </html>
