Edited image path

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="card">
                 <h2>About Me</h2>
                 <div class="about-me">
-                    <img src="/images/profile-image.webp" alt="Fegor Abije" sizes="600px">
+                    <img src="images/profile-image.webp" alt="Fegor Abije" sizes="600px">
 
                     <p>Hi! My name is Fegor William Abije. I am a Nigerian currently running my Bachelor's degree in Software Development at BYU-Idaho, through BYU-Pathway. I love all things tech and I am looking forward to creating solutions that addresses real world problems in the nearest future.</p>
                 </div>    
