Modifies HTML file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="card">
                 <h2>About Me</h2>
                 <div class="about-me">
-                    <img src="images/profile-image.webp" alt="Fegor Abije" sizes="600px">
+                    <img src="images/profile-image.webp" alt="Fegor Abije" size="600px">
 
                     <p>Hi! My name is Fegor William Abije. I am a Nigerian currently running my Bachelor's degree in Software Development at BYU-Idaho, through BYU-Pathway. I love all things tech and I am looking forward to creating solutions that addresses real world problems in the nearest future.</p>
                 </div>    
@@ -42,7 +42,7 @@
                     <h3>Nigeria</h3>
 
                     <div class="about-nigeria">
-                        <img src="images/nigeria-flag.jpg" alt="Nigeria" sizes="600px">
+                        <img src="images/nigeria-flag.jpg" alt="Nigeria" size="600px">
                         
                         <p>Nigeria, located in West Africa, is Africa’s most populous nation, known for its rich culture, history, and economy.
                         Often called the “Giant of Africa,” it has over 200 million people, diverse ethnic groups, and abundant natural
@@ -60,8 +60,8 @@
                     <li><a href="https://www.w3schools.com/">W3Schools</a></li>
                     <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
                     <li><a href="https://web.dev/">web.dev by Google</a></li>
-                    <li><a href="https://stackoverflow.com/">Stack Overflow</a>
-                </li>
+                    <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+                </ul>    
             </section>
         </main>
         <footer>
