--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <title>WDD 131 – Dynamic Web Fundamentals – Fegor Abije</title>
         <link rel="stylesheet" href="styles/base.css">
+        <script src="scripts/getdates.js" defer></script>
     </head>
     <body>
         <header>
