--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <span id="course-tilte">WDD 131 – Dynamic Web Fundamentals</span>
+            <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
 
             <nav>
                 <ul>
