W02 Assignment in Progress

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy; <span id="currentyear">2025</span> Fegor W. Abije, Nigeria</p>
+            <p class="copyright">&copy; <span id="currentyear"></span> ⭐ Fegor William Abije ⭐ Nigeria</p>
             <p id="lastmodified"></p>
         </footer>
     </body>
