--- a/temples.html
+++ b/temples.html
@@ -7,13 +7,14 @@
         <link rel="stylesheet" href="styles/temples.css">
         <link rel="stylesheet" href="styles/temples-large.css">
         <script src="scripts/temples.js" defer></script>
+        <script src="scripts/getdates.js" defer></script>
     </head>
     <body>
         <header>
             Temple Album
 
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Old</a></li>
                     <li><a href="#">New</a></li>
