--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Fegor William Abije">
+        <meta name="description" content="Temple Album Home Page">
         <title>Temple Album</title>
         <link rel="stylesheet" href="styles/temples.css">
         <link rel="stylesheet" href="styles/temples-large.css">
