--- a/temples.html
+++ b/temples.html
@@ -10,12 +10,17 @@
         <link rel="stylesheet" href="styles/temples-large.css">
         <script src="scripts/temples.js" defer></script>
         <script src="scripts/getdates.js" defer></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet">
     </head>
     <body>
         <header>
             Temple Album
 
             <nav>
+                <a href="menu"></a>
                 <ul class="navigation">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Old</a></li>
