--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Fegor William Abije">
-        <meta name="description" content="Temple Album Home Page">
+        <meta name="description" content="Temple Album Home Page. A collection of temples from around the world. ">
         <title>Temple Album</title>
         <link rel="stylesheet" href="styles/temples.css">
         <link rel="stylesheet" href="styles/temples-large.css">
