--- a/temples.html
+++ b/temples.html
@@ -17,10 +17,8 @@
     </head>
     <body>
         <header>
-            Temple Album
-
+            <div class="logo">Temple Album</div>
             <nav>
-                <a href="menu"></a>
                 <ul class="navigation">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Old</a></li>
