--- a/temples.html
+++ b/temples.html
@@ -18,8 +18,14 @@
     <body>
         <header>
             <div class="logo">Temple Album</div>
+            
+            <button class="menu-toggle">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
             <nav>
-                <ul class="navigation">
+                <ul class="menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Old</a></li>
                     <li><a href="#">New</a></li>
