Performed  Folder Restructuring

--- a/week02/styles/temples.html
+++ b/week02/styles/temples.html
@@ -6,10 +6,10 @@
         <meta name="author" content="Fegor William Abije">
         <meta name="description" content="Temple Album Home Page. A collection of temples from around the world. ">
         <title>Temple Album</title>
-        <link rel="stylesheet" href="styles/temples.css">
-        <link rel="stylesheet" href="styles/temples-large.css">
-        <script src="scripts/temples.js" defer></script>
-        <script src="scripts/getdates.js" defer></script>
+        <link rel="stylesheet" href="/week02/styles/temples.css">
+        <link rel="stylesheet" href="/week02/styles/temples-large.css">
+        <script src="/week02/scripts/temples.js" defer></script>
+        <script src="/scripts/getdates.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -41,48 +41,48 @@
 
             <div class="temples-grid">
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
+                    <img src="/week02/images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
                     <figcaption>Abia Nigeria Temple</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/abidjan_ivory_coast_temple_exterior.jpeg" alt="Abidjan Ivory Coast Temple">
+                    <figcaption>Abidjan Ivory Coast Temple</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/abuquerque_temple_lds.jpeg" alt="Abuquerque Temple Lds">
+                    <figcaption>Abuquerque Temple Lds</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/accra_ghana_temple_lds.jpeg" alt="Accra Ghana Temple Lds">
+                    <figcaption>Accra Ghana Temple Lds</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/adelaide_australia_temple_lds.jpeg" alt="Adelaide Australia Temple Lds">
+                    <figcaption>Adelaide Australia Temple Lds</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/atlanta_temple_lds.jpeg" alt="Atlanta Temple Lds">
+                    <figcaption>Atlanta Temple Lds</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/belem_brazil_temple_exterior.jpeg" alt="Belem Brazil Temple Exterior">
+                    <figcaption>Belem Brazil Temple Exterior</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/temple_rendering_bakersfield_california_temple.jpeg" alt="Bakersfield California Temple">
+                    <figcaption>Bakersfield California Temple</figcaption>
                 </figure>
 
                 <figure>
-                    <img src="images/aba-nigeria-temple.jpeg" alt="Abia Nigeria Temple">
-                    <figcaption>Abia Nigeria Temple</figcaption>
+                    <img src="/week02/images/temple_rendering_benin_city_nigeria_temple.jpeg" alt="Benin City Nigeria Temple">
+                    <figcaption>Benin City Nigeria Temple</figcaption>
                 </figure>
             </div>
         </main>
