Deleted some files and updated my portfolio webpage.

--- a/index.html
+++ b/index.html
@@ -31,38 +31,46 @@
         <main>
             <h1>Fegor Abije</h1>
 
-            <section class="card">
+            <section class="card about-section">
                 <h2>About Me</h2>
-                <div class="about-me">
-                    <img src="images/profile-image.webp" alt="Fegor Abije">
 
-                    <p>Hi! My name is Fegor William Abije. I am a Nigerian currently running my Bachelor's degree in Software Development at BYU-Idaho, through BYU-Pathway. I love all things tech and I am looking forward to creating solutions that addresses real world problems in the nearest future.</p>
-                </div>    
+                <div class="card-position">
+                    <div class="about-me">
+                        <img src="images/profile-image.webp" alt="Fegor Abije">
 
-                <div>
-                    <h3>Nigeria</h3>
+                        <p>Hi! My name is Fegor William Abije. I am a Nigerian currently running my Bachelor's degree in Software Development at BYU-Idaho, through BYU-Pathway. I love all things tech and I am looking forward to creating solutions that addresses real world problems in the nearest future.</p>
+                    </div>    
 
-                    <div class="about-nigeria">
-                        <img src="images/nigeria-flag.jpg" alt="Nigeria">
-                        
-                        <p>Nigeria, located in West Africa, is Africa’s most populous nation, known for its rich culture, history, and economy.
-                        Often called the “Giant of Africa,” it has over 200 million people, diverse ethnic groups, and abundant natural
-                        resources like oil and gas.
-                        </p>
+                    <div class="country">
+                        <h3>Nigeria</h3>
+
+                        <div class="about-nigeria">
+                            <figure>
+                                <img src="images/nigeria-flag.jpg" alt="Nigeria">
+                                <figcaption>Official Flag of Nigeria</figcaption>
+                            </figure>
+                            
+                            <p>Nigeria, located in West Africa, is Africa’s most populous nation, known for its rich culture, history, and economy.
+                            Often called the “Giant of Africa,” it has over 200 million people, diverse ethnic groups, and abundant natural
+                            resources like oil and gas.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <section class="card">
+            <section class="card resource-section">
                 <h2>Web Dev Resources</h2>
 
-                <ul>
-                    <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
-                    <li><a href="https://www.w3schools.com/">W3Schools</a></li>
-                    <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
-                    <li><a href="https://web.dev/">web.dev by Google</a></li>
-                    <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-                </ul>    
+                <div class="resources">
+                    <ul>
+                        <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
+                        <li><a href="https://www.w3schools.com/">W3Schools</a></li>
+                        <li><a href="https://css-tricks.com/">CSS-Tricks</a></li>
+                        <li><a href="https://web.dev/">web.dev by Google</a></li>
+                        <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
+                    </ul>
+                </div>    
             </section>
         </main>
         <footer>
