Did some text editing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
         </header>
         <main>
-            <h1>Fegor Abije</h1>
+            <h1>Fegor W. Abije</h1>
 
             <section class="card about-section">
                 <h2>About Me</h2>
